# earnings-stock-analyzer

./: .gitignore  README.md  earnings.py  pyproject.toml
data/: most_volatile_stocks.csv  nasdaq_tickers.csv  sp500_and_nasdaq_tickers.csv
data/output/: top30_momentum_success_rate_2025-07-29_20-56.csv
earnings_stock_analyzer/: __init__.py  analyzer.py  cli.py  fetch.py  momentum.py  plot.py  quadrants.py  schemas.py
output/analysis/: forward_cagr_entry_month_vs_sp500_2018_2024.csv  momentum_top25_detailed_until2024.csv  monthly_returns_vs_sp500_2018_2024.csv  top25_quadrants_momentum_bias.csv  yearly_returns_vs_sp500_2018_2024.csv
output/quadrants/: AAPL_quadrants.csv  AAPL_quadrants_detailed.csv  AAPL_quadrants_summary.csv  ABBV_quadrants.csv  ABBV_quadrants_detailed.csv  ABBV_quadrants_summary.csv  ABNB_quadrants.csv  ABNB_quadrants_detailed.csv  ABNB_quadrants_summary.csv  ABT_quadrants.csv  ABT_quadrants_detailed.csv  ABT_quadrants_summary.csv  ACGL_quadrants.csv  ACGL_quadrants_detailed.csv  ACGL_quadrants_summary.csv  ACN_quadrants.csv  ACN_quadrants_detailed.csv  ACN_quadrants_summary.csv  ADBE_quadrants.csv  ADBE_quadrants_detailed.csv  ADBE_quadrants_summary.csv  ADI_quadrants.csv  ADI_quadrants_detailed.csv  ADI_quadrants_summary.csv  (+1528 more)
scripts/: market_wide_quadrant_analysis.py  momentum_portfolio_top25_until_2024.py  performance_analysis_and_plots.py  run_analysis.py  run_momentum.py  run_multiple_analysis.py  run_quadrants.py  run_single_analysis.py  statistical_analysis.py  top10_abs_change_2025-07-29_20-01.csv  top_25_quadrants_until2017.py
(+6 files in other folders)
